# project-forge

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  EXERCISE.md  FORGE_OPERATIONAL_KNOWLEDGE_GRAPH.md  FORGE_STUDIO_DESIGN_SYSTEM.md  FORGE_STUDIO_EXERCISE_DESIGNER.md  FORGE_STUDIO_INTELLIGENCE_WORKSPACE.md  FORGE_STUDIO_MISSION_CONTROL.md  FORGE_STUDIO_MVP.md  FORGE_STUDIO_UX.md  FORGE_STUDIO_WEB.md  FORGE_STUDIO_WORKSPACE_FRAMEWORK.md  LICENSE  PLATFORM.md  PLUGINS.md  PRODUCT.md  PROFILES.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SERVICES.md  SETUP.md  VISION.md  WORKFLOWS.md  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
assets/: .gitkeep  README.md
brand/: README.md  messaging.md  vision.md  voice.md
brand/colors/: palette.md  tokens.json
brand/icons/: README.md
brand/imagery/: prompts.md
brand/logo/: README.md
brand/presentations/: README.md
brand/typography/: typography.md
brand/ui/: README.md  (+3 more)
config/: .gitkeep  README.md  configuration.example.yaml  entities.example.yaml  events.example.yaml  example.toml  exercise_state.example.yaml  integration_sources.example.yaml  profiles.example.yaml  scenario.example.yaml  translation_dictionaries.example.yaml  workflows.example.yaml
design_system/: README.md  tokens.json
docs/: DOCUMENTATION_POLICY.md
examples/: README.md
knowledge_base/: .gitkeep  README.md
outputs/: .gitkeep  README.md
tests/: README.md  __init__.py  test_models.py
(+270 files in other folders)
